--- a/css/style.css
+++ b/css/style.css
@@ -298,3 +298,20 @@ header ul li:hover {
 	margin-top: -215px;
 	z-index: 1000;
 }
+
+.phone-tip {
+	z-index: 9999;
+	position: absolute;
+	display: none;
+	width: 100%;
+	height: 100%;
+	text-align: center;
+	background: linear-gradient(-90deg, #29bdd9 0%, #276ace 100%);
+	color: white;
+}
+
+.phone-tip p {
+	margin-top: 100px;
+	vertical-align: middle;
+	font-size: 20px;
+}
